--- a/src/app/_components/Button/index.module.scss
+++ b/src/app/_components/Button/index.module.scss
@@ -36,21 +36,25 @@
 .appearance--primary {
   background-color: var(--theme-elevation-1000);
   color: var(--theme-elevation-0);
+  border-radius: 15px;
 }
 
 .appearance--secondary {
   background-color: transparent;
   box-shadow: inset 0 0 0 1px var(--theme-elevation-1000);
+  border-radius: 15px;
 }
 
 .primary--invert {
   background-color: var(--theme-elevation-0);
   color: var(--theme-elevation-1000);
+  border-radius: 15px;
 }
 
 .secondary--invert {
   background-color: var(--theme-elevation-1000);
   box-shadow: inset 0 0 0 1px var(--theme-elevation-0);
+  border-radius: 15px;
 }
 
 .appearance--default {
