log in recover front

--- a/src/app/_components/Input/index.module.scss
+++ b/src/app/_components/Input/index.module.scss
@@ -9,9 +9,9 @@
   font-family: system-ui;
   border-radius: 10px;
   box-shadow: none;
-  border: none;
+  border: 1px solid gray;
   background: none;
-  background-color: var(--theme-elevation-100);
+  background-color: var(--theme-input-100);
   color: var(--theme-elevation-1000);
   height: calc(var(--base) * 2);
   line-height: calc(var(--base) * 2);
@@ -19,7 +19,6 @@
   font-size: inherit;
 
   &:focus {
-    border: none;
     outline: none;
   }
 
