--- a/src/app/(pages)/recover-password/index.module.scss
+++ b/src/app/(pages)/recover-password/index.module.scss
@@ -1,5 +1,116 @@
 @import "../../_css/common";
 
 .recoverPassword {
-  margin-bottom: var(--block-padding);
+  display: grid;
+  grid-template-columns: 1fr 45%;
+  height: 100vh;
+
+  @include mid-break {
+    grid-template-columns: 1fr;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url('/assets/images/image-1.svg');
+  }
+
+  p {
+    color: var(--color-text);
+  }
+}
+
+.heroImg {
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url('/assets/images/image-1.svg');
+
+  @include mid-break {
+    background: none;
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.logo {
+  margin: 60px;
+  width: 30%;
+  min-width: 150px;
+  z-index: 10;
+
+  @include mid-break {
+    width: 45%;
+    margin: 10px;
+  }
+}
+
+.formWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+
+  @include mid-break {
+    justify-content: flex-start;
+    padding: 10px;
+  }
+}
+
+.formContainer {
+  max-width: 600px;
+  width: 100%;
+  padding: 50px;
+  border-radius: 10px;
+
+  @include mid-break {
+    backdrop-filter: blur(30px);
+    border: 1px solid gray;
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  }
+
+  @include small-break {
+    padding: 30px;
+  }
+}
+
+
+.formTitle {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 100%;
+
+  h3 {
+    margin-bottom: 8px;
+
+    @include mid-break {
+      font-size: 34px;
+      margin-bottom: 8px;
+    }
+  }
+
+  p {
+    text-align: center;
+    color: var(--color-base-450);
+  }
+}
+
+.params {
+  margin-top: var(--base);
+}
+
+.backLink {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+  gap: 4px;
+  text-decoration: none;
+
+  p {
+    color: var(--color-base-450);
+    font-size: 18px;
+  }
 }
