--- a/src/app/_blocks/CallToAction/index.module.scss
+++ b/src/app/_blocks/CallToAction/index.module.scss
@@ -8,6 +8,7 @@ $spacer-h: calc(var(--block-padding) / 2);
   position: relative;
   background-color: var(--theme-elevation-100);
   color: var(--theme-elevation-1000);
+  border-radius: 15px;
 }
 
 :global([data-theme="dark"]) {
