--- a/src/app/_components/Card/index.module.scss
+++ b/src/app/_components/Card/index.module.scss
@@ -8,6 +8,11 @@
   flex-direction: column;
 }
 
+.card:hover {
+  transform: scale(1.02);
+  transition: 0.3s;
+}
+
 .vertical {
   flex-direction: column;
 }
